--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">Login UI 2</string>
+    <string name="app_name">DINCI</string>
+
+    <string name="user">Usuario</string>
+    <string name="pass">Contraseña</string>
+    <string name="Repass">Confirmar Contraseña</string>
+    <string name="phone">Celular</string>
+    <string name="registrarme">Registrarme</string>
+    <string name="cuenta">Crear Cuenta</string>
+    <string name="MensajeCuenta">¿Ya eres Usuario?...Inicia Sesion</string>
+    <string name="login">Iniciar Sesion</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Noticias</string>
+    <string name="title_activity_news">NewsActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
