--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="title_notifications">Noticias</string>
     <string name="title_activity_news">NewsActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_incidentes">Incidentes</string>
+    <string name="title_perfil">Perfil</string>
+
 
     <string name="tipo">Tipo</string>
     <string name="lugar">Lugar</string>
@@ -26,4 +29,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
