Se agrego la vista nuevo incidente y detalle de incidente, asi como la integracion de imagenes y nuevo diseño xd

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,12 +19,12 @@
     <string name="title_perfil">Perfil</string>
 
 
-    <string name="tipo">Tipo</string>
-    <string name="lugar">Lugar</string>
-    <string name="descripcion">Descripción</string>
+    <string name="tipo">Tipo:</string>
+    <string name="lugar">Lugar:</string>
+    <string name="descripcion">Descripción:</string>
     <string name="foto">Foto</string>
 
-    <string name="estado">Estado</string>
+    <string name="estado">Estado:</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
